# wgpu-renderer

./: Cargo.toml  README.md  build.rs  gltf_mat.md  index.html  obj_mat.md
assets/meshes/greg/: GREGv2_base_sculpt_retopo.blend  GREGv2_base_sculpt_retopo.blend1  greg-applied-uv.mtl  greg-edited.mtl  greg-rev-b.mtl  greg-rev-c.mtl  greg_basic_export_applied_uv.glb  greg_basic_export_applied_uv.gltf
assets/meshes/light/: light-object.mtl  light.blend1  light.mtl
assets/meshes/monkey/: lp-monkey.blend  lp-monkey.mtl  monkey.mtl
pkg/: package.json  wgpu_intro.d.ts  wgpu_intro.js  wgpu_intro_bg.wasm  wgpu_intro_bg.wasm.d.ts  wgpu_renderer.d.ts  wgpu_renderer.js  wgpu_renderer_bg.wasm  wgpu_renderer_bg.wasm.d.ts
src/: lib.rs
src/app/: app.rs  mod.rs  window.rs
src/buffer/: mod.rs
src/camera/: camera.rs  controller.rs  mod.rs  ortho_camera.rs
src/instance/: mod.rs
src/light/: mod.rs
src/model/: mod.rs
src/primitives/: mod.rs  quad.rs  triangle.rs
src/render/: mod.rs
src/resources/: mod.rs
src/shaders/: light.wgsl  quad.wgsl  shader.wgsl  triangle.wgsl
src/texture/: mod.rs  texture.rs
