[package]
name = "wgpu-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
cfg-if = "1"
anyhow = "1.0"
winit = "0.28.0"
wgpu = "0.17.0"
env_logger = "0.9"
log = "0.4"
instant = "0.1"
pollster = "0.2"
bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18"
tobj = { version = "3.2.1", features = ["async"] }
gltf = "1.4.0"
# getrandom is not a direct dependency, but we still need to enable the js feature for the project to build on wasm
# this seems like it may have been introduced after adding  tobj?
getrandom = { version = "0.2", features = ["js"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = "0.11"
